--- a/koans/pom.xml
+++ b/koans/pom.xml
@@ -31,8 +31,8 @@
       </roles>
     </developer>
     <developer>
-      <id>YOU</id>
-      <name>Your name here</name>
+      <id>mina8</id>
+      <name>Mina Vu</name>
       <email>you@youremail.com</email>
       <url>http://www.cs.pdx.edu/~YOU</url>
       <organization>PSU Department of Computer Science</organization>
