--- a/airline-android/app/src/main/AndroidManifest.xml
+++ b/airline-android/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AirlineAndroid">
         <activity
+            android:name=".ReadmeActivity"
+            android:exported="false" />
+        <activity
             android:name=".CalculatorActivity"
             android:exported="false" />
         <activity
