--- a/airline-android/app/src/main/AndroidManifest.xml
+++ b/airline-android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="edu.pdx.cs410j.mina8">
+    package="edu.pdx.cs410j.mina8" >
 
     <application
         android:allowBackup="true"
@@ -8,7 +8,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AirlineAndroid">
+        android:theme="@style/Theme.AirlineAndroid" >
+        <activity
+            android:name=".newFlightActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AirlineActivity"
+            android:exported="false" />
         <activity
             android:name=".ReadmeActivity"
             android:exported="false" />
@@ -17,7 +23,7 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
